--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.7.0",
-    "flowbite-react": "^0.9.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
@@ -30,7 +29,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
