--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mkyy/mui-search-bar": "^0.5.2",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.7.0",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
