--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.7.1",
     "@mui/x-data-grid": "^7.7.0",
     "@radix-ui/react-slot": "^1.1.0",
     "add": "^2.0.6",
