--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.7.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
