--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-charts": "^7.7.1",
     "@mui/x-data-grid": "^7.7.0",
     "@radix-ui/react-slot": "^1.1.0",
     "add": "^2.0.6",
+    "apexcharts": "^3.49.2",
     "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,6 +28,7 @@
     "i18next-http-backend": "^2.5.2",
     "lucide-react": "^0.395.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
