--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "add": "^2.0.6",
     "apexcharts": "^3.49.2",
-    "calendar": "^0.1.1",
-    "date-fns": "^3.6.0",
     "axios": "^1.7.2",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -40,6 +40,7 @@
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "reselect": "^5.1.1",
     "shadcn-ui": "^0.8.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
