--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.7.0",
     "@mui/x-date-pickers": "^7.7.1",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "add": "^2.0.6",
     "apexcharts": "^3.49.2",
-    "calendar": "^0.1.1",
-    "date-fns": "^3.6.0",
     "axios": "^1.7.2",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -40,6 +41,7 @@
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "shadcn-ui": "^0.8.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
