--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6",
     "reselect": "^5.1.1",
     "shadcn-ui": "^0.8.0",
     "styled-components": "^6.1.11",
