--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "i18next": "^23.11.5",
