--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "add": "^2.0.6",
     "apexcharts": "^3.49.2",
     "axios": "^1.7.2",
